Updating users password. Separating user validation by field.
